<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/product_name_title"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sale"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:focusable="false"
                android:layout_gravity="bottom"
                android:focusableInTouchMode="false"
                android:src="@drawable/ic_local_grocery_store_black_18dp"
                android:text="@string/sale_button"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="16dp"
                android:text="@string/price_title"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_currency"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:text="quantity"
                android:textAppearance="?android:textAppearanceLarge"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>